[gd_scene load_steps=6 format=3 uid="uid://b47bekomubotr"]

[ext_resource type="Texture2D" uid="uid://b8pgots7rhv5y" path="res://textures/fishy.png" id="1_cgyoc"]
[ext_resource type="Script" path="res://scenes/level_select/level_select.gd" id="1_n4oea"]
[ext_resource type="Texture2D" uid="uid://dfrbcms32h0s5" path="res://textures/fishyDark.png" id="2_jq0oc"]
[ext_resource type="Texture2D" uid="uid://ds37j38egatnn" path="res://textures/octy.png" id="3_y01rs"]
[ext_resource type="Texture2D" uid="uid://btce1qfw3cd3l" path="res://textures/octyDark.png" id="4_hpna1"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_n4oea")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 496.0
offset_right = 944.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Level Select"

[node name="FirstLevelButton" type="TextureButton" parent="."]
offset_left = 172.0
offset_top = 382.0
offset_right = 428.0
offset_bottom = 638.0
texture_normal = ExtResource("1_cgyoc")
texture_pressed = ExtResource("2_jq0oc")
stretch_mode = 4

[node name="Label" type="Label" parent="FirstLevelButton"]
layout_mode = 0
offset_left = -136.0
offset_top = 282.0
offset_right = 468.0
offset_bottom = 323.0
theme_override_font_sizes/font_size = 64
text = "The Ocean Hides its Fish Secrets"

[node name="SecondLevelButton" type="TextureButton" parent="."]
auto_translate_mode = 1
offset_left = 901.0
offset_top = 384.0
offset_right = 1157.0
offset_bottom = 640.0
texture_normal = ExtResource("3_y01rs")
texture_pressed = ExtResource("4_hpna1")
stretch_mode = 4

[node name="Label" type="Label" parent="SecondLevelButton"]
auto_translate_mode = 1
layout_mode = 0
offset_left = -136.0
offset_top = 282.0
offset_right = 468.0
offset_bottom = 323.0
theme_override_font_sizes/font_size = 64
text = "Hidden Squid-like Creatures,
 Hidden in the Depths"

[connection signal="pressed" from="FirstLevelButton" to="." method="_on_first_level_button_pressed"]
[connection signal="pressed" from="SecondLevelButton" to="." method="_on_second_level_button_pressed"]
